--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
  <head>
    <meta charset="utf-8" />
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
    <link rel="stylesheet" href="css/styles.css" />
+   
    <title>Web GIS</title>
  </head>
  
@@ -31,5 +33,7 @@
         <p class="copyright"> &copy; Abdullah Toqeer, University of Tartu, 2022</p>
       </footer>
   </div>
+  <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+  <script src="js/javascript.js"></script>
  </body>
 </html>
