--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
      <div class="w3-container">
        <div
-       class="map" id = "#map">
+       class="map" id="map">
        </div>
     </div> 
 
