--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <p class="copyright"> &copy; Abdullah Toqeer, University of Tartu, 2022</p>
       </footer>
   </div>
+  <button onclick="defaultMapSettings()">Default</button>
   <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
   <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
   <script src="js/javascript.js"></script>
