--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <h1><p>Web GIS Application</p></h1>
 
      <div class="w3-container">
-      <button onclick="defaultMapSettings()">Default view<class="button"/button>
+      <button class="button" onclick="defaultMapSettings()">Default view</button>
        <div
        class="map" id="map">
        </div>
