--- a/choroplethmap.html
+++ b/choroplethmap.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+ <head>
+   <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+   
+   <title>Web GIS</title>
+ </head>
+ 
+ <body>
+     <div>
+       <img src="img\banner.jpg" >
+      </div>
 
+      <div class="topnav">
+        <a class="active" href="index.html">Basic Map </a>
+        <a href="#">Choropleth Map</a>
+        <a href="#">Heatmap</a>
+      </div> 
+
+     <h1><p>Web GIS Application</p></h1>
+
+     <div class="w3-container">
+     <button class="button" onclick="defaultMapSettings()">Default view</button>
+       <div
+       class="map" id="map">
+       </div>
+    </div> 
+
+     <div class="footer-basic">
+      <footer>
+          
+        <p class="copyright"> &copy; Abdullah Toqeer, University of Tartu, 2022</p>
+      </footer>
+  </div>
+  <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+  <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+  <script src="js/javascript.js"></script>
+ </body>
+</html>
