--- a/choroplethmap.html
+++ b/choroplethmap.html
@@ -16,8 +16,8 @@
       </div>
 
       <div class="topnav">
-        <a class="active" href="index.html">Basic Map </a>
-        <a href="#">Choropleth Map</a>
+        <a href="#">Basic Map </a>
+        <a class="active" href="choroplethmap.html">Choropleth Map</a>
         <a href="#">Heatmap</a>
       </div> 
 
@@ -37,7 +37,7 @@
       </footer>
   </div>
   <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-  <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-  <script src="js/javascript.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/leaflet-choropleth@1.1.4/dist/choropleth.js"></script>
+  <script src="js/choroplethmap.js"></script>
  </body>
 </html>
