--- a/heatmap.html
+++ b/heatmap.html
@@ -3,8 +3,6 @@
  <head>
    <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="css/styles.css" />
    
    <title>Web GIS</title>
@@ -16,9 +14,9 @@
       </div>
 
       <div class="topnav">
-        <a class="active" href="index.html">Basic Map </a>
+        <a  href="#">Basic Map </a>
         <a href="#">Choropleth Map</a>
-        <a href="#">Heatmap</a>
+        <a class="active" href="heatmap.html">Heatmap</a>
       </div> 
 
      <h1><p>Web GIS Application</p></h1>
@@ -37,7 +35,7 @@
       </footer>
   </div>
   <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-  <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-  <script src="js/javascript.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/leaflet.heat@0.2.0/dist/leaflet-heat.min.js"></script>
+  <script src="js/heatmap.js"></script>
  </body>
 </html>
