--- a/heatmap.html
+++ b/heatmap.html
@@ -14,8 +14,8 @@
       </div>
 
       <div class="topnav">
-        <a  href="#">Basic Map </a>
-        <a href="#">Choropleth Map</a>
+        <a  href="index.html">Basic Map </a>
+        <a href="choroplethmap.html">Choropleth Map</a>
         <a class="active" href="heatmap.html">Heatmap</a>
       </div> 
 
