--- a/choroplethmap.html
+++ b/choroplethmap.html
@@ -14,9 +14,9 @@
       </div>
 
       <div class="topnav">
-        <a href="#">Basic Map </a>
+        <a href="index.html">Basic Map </a>
         <a class="active" href="choroplethmap.html">Choropleth Map</a>
-        <a href="#">Heatmap</a>
+        <a href="heatmap.html">Heatmap</a>
       </div> 
 
      <h1><p>Web GIS Application</p></h1>
