--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
 
       <div class="topnav">
-        <a class="active" href="index.html">Basic Map </a>
-        <a href="#">Choropleth Map</a>
-        <a href="#">Heatmap</a>
+        <a href="index.html" class="active">Basic Map</a>
+        <a href="choroplethmap.html">Choropleth Map</a>
+        <a href="heatmap.html">Heatmap</a>
       </div> 
 
      <h1><p>Web GIS Application</p></h1>
