--- a/choroplethmap.html
+++ b/choroplethmap.html
@@ -17,6 +17,7 @@
         <a href="index.html">Basic Map </a>
         <a class="active" href="choroplethmap.html">Choropleth Map</a>
         <a href="heatmap.html">Heatmap</a>
+        <a href="about.html">About</a>
       </div> 
 
      <h1><p>Web GIS Application</p></h1>
