--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="index.html" class="active">Basic Map</a>
         <a href="choroplethmap.html">Choropleth Map</a>
         <a href="heatmap.html">Heatmap</a>
+        <a href="about.html">About</a>
       </div> 
 
      <h1><p>Web GIS Application</p></h1>
