--- a/about.html
+++ b/about.html
@@ -3,8 +3,6 @@
  <head>
    <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="css/styles.css" />
    
    <title>Web GIS</title>
@@ -24,3 +22,18 @@
 
      <h1><p>Web GIS Application</p></h1>
      <h3><p>This Web GIS application provides interactive location map, Choropleth map and heatmap of cell towers location in different districts of Tartu city</p></h3>
+
+     <div class="w3-container">
+       <div
+       class="map" id = "#map">
+       </div>
+    </div> 
+
+     <div class="footer-basic">
+      <footer>
+          
+        <p class="copyright"> &copy; Abdullah Toqeer, University of Tartu, 2022</p>
+      </footer>
+  </div>
+ </body>
+</html>
