--- a/about.html
+++ b/about.html
@@ -23,6 +23,12 @@
      <h1><p>Web GIS Application</p></h1>
      <h3><p>This Web GIS application provides interactive location map, Choropleth map and heatmap of cell towers location in different districts of Tartu city</p></h3>
 
+     <div id="current_date"></p>
+     <script>
+     document.getElementById("current_date").innerHTML = Date();
+     </script>
+
+  
      <div class="w3-container">
        <div
        class="map" id = "#map">
