--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
      <h1><p>Web GIS Application</p></h1>
      <h3><p>This Web GIS application provides interactive location map, Choropleth map and heatmap of cell towers location in different districts of Tartu city</p></h3>
 
-     <div id="current_date"></p>
+     <p>This web application is last updated on: </p><div id="current_date"></p>
      <script>
      document.getElementById("current_date").innerHTML = Date();
      </script>
