--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
      <h3><p>This Web GIS application provides interactive location map, Choropleth map and heatmap of cell towers location in different districts of Tartu city</p></h3>
 
      <div 
-          <h4><p>Web application created by: Abdullah Toqeer </p></h4>
-          <p><a href="http://abdullahtoqeer.com/">E-Portfolio</a></p> 
-          <h4><p>Web page last updated on: </p></h4> 
+          <h4><p>Web application created by:</p></h4>
+          <p><a href="http://abdullahtoqeer.com/">Abdullah Toqeer</a></p> 
+          <h4><p>Web page last updated on:</p></h4> 
           <div id="current_date"></p>
           <script>
           document.getElementById("current_date").innerHTML = Date();
